# hw8-depth-buffer-and-post-processing

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  Report.md  questions.txt
Assets/Data/: characters.json
Assets/animations/CS230_Final/: PassengerAngry.anm  PassengerIdle.anm  PassengerSad.anm  Shining.anm  Tears.anm
Assets/animations/DemoSceneShowcase/: Flame.anm  SamuraiRun.anm
Assets/shaders/: basic.frag  basic.vert  pass_thru_pos2d_clr.vert  sdf.frag  sdf.vert
Assets/shaders/BatchRenderer2D/: quad.vert
Assets/shaders/DemoBufferTypes/: villager.vert
Assets/shaders/InstancedRenderer2D/: sdf.vert
Assets/shaders/PostProcess/: chromatic-aberration.frag  pixelize.frag
Assets/sprites/CS230_Final/: Bomb.spt  Bread.spt  Bus.spt  Hotdog.spt  KimBab.spt  Passenger.spt  Player.spt  Shining.spt  Shoes.spt  Snack.spt  Strawberry.spt  Tears.spt
Assets/sprites/DemoSceneShowcase/: Flame.spt  Meteor.spt  Samurai.spt
cmake/: Dependencies.cmake
cs200-hw8/: CMakeLists.txt  hw8-setting.txt  hw8-source1.txt  hw8-source2.txt  hw8-source3.txt  hw8-source4.txt  hw8-source5.txt  hw8-source6.txt  hw8-source7.txt  hw8-source8.txt  hw8-structure.txt  hw8.txt  split_ingest.py
cs200-hw8/Assets/shaders/: basic_vtx_clr_attribute.frag
cs200-hw8/Assets/shaders/BatchRenderer2D/: quad.frag  sdf.frag  sdf.vert
cs200-hw8/Assets/shaders/DemoBufferTypes/: background.vert
cs200-hw8/Assets/shaders/ImmediateRenderer2D/: quad.frag  quad.vert  sdf.frag  sdf.vert
cs200-hw8/Assets/shaders/InstancedRenderer2D/: quad.frag  quad.vert
cs200-hw8/Assets/shaders/PostProcess/: box-blur.frag  gamma-correct.frag  simple-texture.frag  simple.vert
cs200-hw8/Assets/shaders/shape/: shape.frag  shape.vert
cs200-hw8/source/CS200/: Image.cpp  ImmediateRenderer2D.cpp  InstancedRenderer2D.cpp  InstancedRenderer2D.h  NDC.h  PostProcessingPipeline.h  Renderer2DUtils.h
cs200-hw8/source/Engine/: Animation.cpp  Camera.cpp  Camera.h  Collision.h  ComponentManager.h  Engine.cpp  Engine.h  Fonts.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameState.h  GameStateManager.cpp  Path.h  ShowCollision.cpp  ShowCollision.h  Sprite.cpp  TextManager.cpp  TextManager.h  TextureManager.cpp  Vec2.cpp  Vec2.h  Window.h
cs200-hw8/source/Game/: MainMenu.cpp  MainMenu.h  Splash.h
cs200-hw8/source/OpenGL/: Buffer.cpp  Buffer.h  GL.cpp  GL.h  Handle.h  Shader.cpp  Texture.cpp  VertexArray.cpp
docs/: DebuggingWeb.md
scripts/: rename_hpp_to_h.py  scan_build_project.py
source/: CMakeLists.txt  FarmSceneRenderer.cpp  FarmSceneRenderer.hpp  GL.cpp  GL.h  Handle.hpp  IRenderer2D.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  ImmediateRenderer2D.cpp  ImmediateRenderer2D.hpp  OffscreenFramebuffer.cpp  OffscreenFramebuffer.hpp  Path.cpp  Path.hpp  PostProcessingPipeline.cpp  PostProcessingPipeline.hpp  README.md  Random.cpp  Random.hpp  Shader.cpp  Shader.hpp  demo.cpp  main.cpp
source/CS200/: BatchRenderer2D.cpp  BatchRenderer2D.h  IRenderer2D.h  ImGuiHelper.cpp  Image.h  ImmediateRenderer2D.h  OffscreenFramebuffer.cpp  OffscreenFramebuffer.h  PostProcessingPipeline.cpp  RGBA.h  Renderer2DUtils.cpp  RenderingAPI.cpp  RenderingAPI.h  Shape.cpp  Shape.h
source/Demo/: DemoBatchInstance.cpp  DemoBatchInstance.h  DemoBufferTypes.cpp  DemoBufferTypes.h  DemoCS230Textures.cpp  DemoCS230Textures.h  DemoDepthPost.cpp  DemoDepthPost.h  DemoFramebuffer.cpp  DemoFramebuffer.h  DemoShapes.cpp  DemoShapes.h  DemoText.cpp  DemoText.h  DemoTexturing.cpp  DemoTexturing.h  DemoVAO.cpp  DemoVAO.h
source/Demo/Demo7/: Moon.cpp  Moon.h  Road.cpp  Road.h  Stars.cpp  Stars.h  Triangle.cpp  Triangle.h  WorldSize.h
source/Demo/DemoSceneShowcase/: Map.cpp  Map.h  Samurai.cpp  Samurai.h  SceneState.cpp  SceneState.h
source/Engine/: Animation.h  Collision.cpp  Component.h  Error.h  Font.cpp  Font.h  GameObjectManager.h  GameStateManager.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  Particle.cpp  Particle.h  Path.cpp  Random.cpp  Random.h  Rect.h  Sprite.h  Texture.cpp  Texture.h  TextureManager.h  Timer.h  Window.cpp
source/Game/: Background.cpp  Background.h  GameObjectTypes.h  MainMenu.cpp  MainMenu.h  Particles.h  Score.cpp  Score.h  Splash.cpp  States.h
source/Game/CS230_Final/Components/: Bounce.cpp  Bounce.h  Grid.cpp  Grid.h  Random.cpp  Random.h  Ziggle.cpp  Ziggle.h
source/Game/CS230_Final/Objects/: Bus.cpp  Bus.h  BusLine.h  Constants.h  Food.cpp  Food.h  Obstacle.cpp  Obstacle.h  Passenger.cpp  Passenger.h  Player.cpp  Player.h
source/Game/CS230_Final/States/: BadSandwich.cpp  BadSandwich.h  GoodSandwich.cpp  GoodSandwich.h  NormalSandwich.cpp  NormalSandwich.h  Project.cpp  Project.h
source/Game/States/: ConsoleTest.cpp  ConsoleTest.h  RenderingTest.cpp  RenderingTest.h
source/OpenGL/: Framebuffer.cpp  Framebuffer.h  Shader.h  Texture.h  VertexArray.h
